myapp-with-appgw-ingress-controller/nginx-service-and-ingress_tls_from_listener.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  labels:
    app: nginx
spec:
  type: ClusterIP  # Restricts access to within the cluster
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80            # Internal service port
      targetPort: 80      # Container port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "wingserp.net"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway  # Specify the Ingress class
  rules:
    - host: webapp.wingserp.net
      http:
        paths:
          - path: /
            pathType: Prefix  # Required field
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
